tests/neg/companion-scope-inference-shadowing-varargs.check
-- [E007] Type Mismatch Error: tests/neg/companion-scope-inference-shadowing-varargs.scala:17:23 -----------------------
17 |  val n: Int = palette(Red, Blue) // error
   |                       ^^^
   |                       Found:    (Vararg.Red : String)
   |                       Required: Color
   |
   |                       Note: `Color` has a member named `Red`; qualify as `Color.Red` if you meant that.
   |
   | longer explanation available when compiling with `-explain`
